--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         
         <h2>Jim Pratt</h2>
 
-        <img src=
+        <img src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/AAIA_wDGAAAAAQAAAAAAAAxcAAAAJDY0YWNlMGUyLTY2YWEtNDY1Yi04MzAxLWQ0MTM5ZjdjOTYzZg.jpg" alt="Headshot of Jim"/>
 
     </body>
 </html>
