--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
         <h2>Jim Pratt</h2>
 
         <img src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/AAIA_wDGAAAAAQAAAAAAAAxcAAAAJDY0YWNlMGUyLTY2YWEtNDY1Yi04MzAxLWQ0MTM5ZjdjOTYzZg.jpg" alt="Headshot of Jim"/>
-
+        <p>I have a beard!</p>
     </body>
 </html>
