--- a/index.html
+++ b/index.html
@@ -12,5 +12,16 @@
 
         <img src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/AAIA_wDGAAAAAQAAAAAAAAxcAAAAJDY0YWNlMGUyLTY2YWEtNDY1Yi04MzAxLWQ0MTM5ZjdjOTYzZg.jpg" alt="Headshot of Jim"/>
         <p>I have a beard!</p>
+
+        <h2>
+            Contact Info
+        </h2>
+
+        <ul>
+            <li><strong>Email:Blah@blah.blah</strong></li>
+            <li><strong>Email:Blah@blah.blah</strong></li>
+            <li><strong>Email:Blah@blah.blah</strong></li>
+        </ul>
+
     </body>
 </html>
