--- a/index.html
+++ b/index.html
@@ -7,21 +7,37 @@
     <body>
 
         <h1>My Fun Bio</h1>
-        
-        <h2>Jim Pratt</h2>
 
-        <img src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/AAIA_wDGAAAAAQAAAAAAAAxcAAAAJDY0YWNlMGUyLTY2YWEtNDY1Yi04MzAxLWQ0MTM5ZjdjOTYzZg.jpg" alt="Headshot of Jim"/>
-        <p>I have a beard!</p>
+        <div>
 
-        <h2>
-            Contact Info
-        </h2>
+            <nav>
+                <ul>
+                    <li><a href="#">Homepage</a></li>
+                    <li>portfolio</li>
+                    <li>About</li>
+                </ul>
+            </nav>
 
-        <ul>
-            <li><strong>Email:Blah@blah.blah</strong></li>
-            <li><strong>Email:Blah@blah.blah</strong></li>
-            <li><strong>Email:Blah@blah.blah</strong></li>
-        </ul>
+            <h2>About Me</h2>
+            <h2>Jim Pratt</h2>
+
+            <img src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/AAIA_wDGAAAAAQAAAAAAAAxcAAAAJDY0YWNlMGUyLTY2YWEtNDY1Yi04MzAxLWQ0MTM5ZjdjOTYzZg.jpg" alt="Headshot of Jim"/>
+            <p>I have a beard!</p>
+
+        </div>
+
+        <div>
+
+            <h2>Contact Info</h2>
+
+            <ul>
+                <li><strong>Email:Blah@blah.blah</strong></li>
+                <li><strong>Email:Blah@blah.blah</strong></li>
+                <li><strong>Email:Blah@blah.blah</strong></li>
+            </ul>
+
+        </div>
 
     </body>
+
 </html>
