--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
             <nav>
                 <ul>
                     <li><a href="#">Homepage</a></li>
-                    <li>portfolio</li>
+                    <li>Portfolio</li>
                     <li>About</li>
                 </ul>
             </nav>
 
             <h2>About Me</h2>
-            <h2>Jim Pratt</h2>
+            <h3>Jim Pratt</h3>
 
             <img src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/AAIA_wDGAAAAAQAAAAAAAAxcAAAAJDY0YWNlMGUyLTY2YWEtNDY1Yi04MzAxLWQ0MTM5ZjdjOTYzZg.jpg" alt="Headshot of Jim"/>
             <p>I have a beard!</p>
@@ -31,9 +31,9 @@
             <h2>Contact Info</h2>
 
             <ul>
-                <li><strong>Email:Blah@blah.blah</strong></li>
-                <li><strong>Email:Blah@blah.blah</strong></li>
-                <li><strong>Email:Blah@blah.blah</strong></li>
+                <li><strong>Email: Blah@blah.blah</strong></li>
+                <li><strong>Address: A Place</strong></li>
+                <li><strong>Profession: Battle Mage</strong></li>
             </ul>
 
         </div>
