--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Jim's Student Bio</title>
-
+        <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
 
@@ -12,7 +12,7 @@
 
             <nav>
                 <ul>
-                    <li><a href="#">Homepage</a></li>
+                    <li class="orange"><a href="#">Homepage</a></li>
                     <li>Portfolio</li>
                     <li>About</li>
                 </ul>
@@ -28,10 +28,10 @@
 
         <div>
 
-            <h2>Contact Info</h2>
+            <h2 class="orange">Contact Info</h2>
 
             <ul>
-                <li><strong>Email: Blah@blah.blah</strong></li>
+                <li id="boxy"><strong>Email: Blah@blah.blah</strong></li>
                 <li><strong>Address: A Place</strong></li>
                 <li><strong>Profession: Battle Mage</strong></li>
             </ul>
